# ephemeris

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/workflows/: tests.yml
commands/: ingest.md  query.md
docs/: mcp-config.md  mempalace-supplement.md  setup.md  token-efficiency.md  workflow-phases.md
ephemeris/: capture.py  citations.py  cli.py  config.py  cursor.py  exceptions.py  ingest.py  log.py  merge.py  model.py  prompts.py  query.py  schema.py  scope.py  stage.py  transcript.py  wiki.py
ephemeris/sources/: __init__.py  arbitrary_md.py  base.py  native_transcript.py  session_docs.py
hooks/: context-snapshot.js  hooks.json  post_session.py  pre_compact.py  session-reminder.js  session_ingest.py  workflow_phase_reminder.py
hooks/_lib/: payload.py  staging_root.py
schema/: default.md
scripts/: backfill.py
scripts/ingest/: __init__.py  graphiti_client.py  ingest_codebase.py  ingest_jira.py  ingest_sessions.py
scripts/schema/: __init__.py  entity_types.py
scripts/view/: __init__.py  lint.py  render.py
skills/ingest/: SKILL.md
skills/lint/: SKILL.md
skills/query/: SKILL.md
skills/render/: SKILL.md
skills/session-handoff/: README.md  SKILL.md  learnings.md
skills/session-index/: README.md  SKILL.md
tests/: conftest.py  test_schema.py
tests/hooks/: test_session_ingest.py  test_staging_root.py  test_workflow_phase_reminder.py
tests/ingest/: test_graphiti_client.py  test_ingest_codebase.py  test_ingest_jira.py  test_ingest_sessions.py
(+121 files in other folders)
