[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ephemeris"
version = "0.1.0"
description = "Ambient knowledge system — session artifacts, git history, and Jira tickets into a temporal knowledge graph"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "TrevorEdris" }]

dependencies = [
  "graphiti-core[kuzu]>=0.3.0",
  "jinja2>=3.1",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["scripts"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts", "hooks"]
